# valuous

./: .env.example  .gitignore  README.md  google_token.pickle  pyproject.toml
src/valuous/: main.py  settings.py
src/valuous/browsers/: __unused__trace_explorer.py  bed.py  clock.py  current_objective.py  gmail.py  python_explorer.py  source_explorer.py  stack_view.py
src/valuous/example_module/: example_submodule.py
src/valuous/peripherals/: __unused__db.py  __unused__state.py  cli.py  db.py  git.py  gmail.py  google.py  log.py  logger.py  memory.py  remember.py  state.py  telegram.py
src/valuous/peripherals/model_providers/: anthropic.py  openai.py
src/valuous/procedures/: __unused__read_procedure.py
src/valuous/self/: agent.py  decorators.py  execution.py  infer.py  loop.py  procedure.py  setup.py  shared_data.py  sync.py  sync_git.py  system_prompts.py  tool.py  trace.py
tests/valuous/peripherals/: test_gmail.py  test_telegram.py
tests/valuous/self/: test_tool.py  test_trace.py
