[tool.poetry]
name = "valuous"
version = "0.1.0"
description = ""
authors = ["Daniel Sosebee <dnsosebee@gmail.com>"]
readme = "README.md"
packages = [
    { include = "valuous", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pydantic = {extras = ["dotenv"], version = "^2.7.4"}
pydantic-settings = "^2.3.3"
openai = "^1.37.0"
pycozo = {extras = ["embedded", "pandas", "requests"], version = "^0.7.6"}
pytest = "^8.3.2"
pure-teleapi = "^1.7.4"
google-api-python-client = "^2.142.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.1"
simplegmail = "^4.1.1"
openapi-pydantic = "^0.4.1"
jsonschema = "^4.23.0"
anthropic = "^0.34.1"

[tool.poetry.scripts]
start = "valuous.main:main"
test = "pytest:main"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.23.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-v -s"
testpaths = ["tests"]